// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff-printer renders diff for arrays with mixed types: 1) left side diff 1`] = `
"  [
    1,
    "string",
    true,
    {
      "key1": "value1",
      "key2": "value2",
    },
-   "different",
-   {
-     "key1": "changed1",
-     "key2": "changed2",
-   },
  ]"
`;

exports[`diff-printer renders diff for arrays with mixed types: 2) right side diff 1`] = `
"  [
    1,
    "different",
    true,
    {
      "key1": "changed1",
      "key2": "changed2",
    },
-   "string",
-   {
-     "key1": "value1",
-     "key2": "value2",
-   },
  ]"
`;

exports[`diff-printer renders diff for arrays with mixed types: 3) left side diff exact 1`] = `
"  [
    1,
-   "different",
+   "string",
    true,
    {
-     "key1": "changed1",
+     "key1": "value1",
-     "key2": "changed2",
+     "key2": "value2",
    },
  ]"
`;

exports[`diff-printer renders diff for arrays with mixed types: 4) right side diff exact 1`] = `
"  [
    1,
-   "string",
+   "different",
    true,
    {
-     "key1": "value1",
+     "key1": "changed1",
-     "key2": "value2",
+     "key2": "changed2",
    },
  ]"
`;

exports[`diff-printer renders diff for complex nested structures: 1) left side diff 1`] = `
"  {
    "level1": {
      "level2A": {
        "level3A": {
-         "value": "changed",
+         "value": "original",
        },
        "level3B": [
          1,
          2,
          {
            "nestedValue": "same",
          },
        ],
      },
      "level2B": "unchanged",
    },
  }"
`;

exports[`diff-printer renders diff for complex nested structures: 2) right side diff 1`] = `
"  {
    "level1": {
      "level2A": {
        "level3A": {
-         "value": "original",
+         "value": "changed",
        },
        "level3B": [
          1,
          2,
          {
            "nestedValue": "same",
          },
        ],
      },
      "level2B": "unchanged",
    },
  }"
`;

exports[`diff-printer renders diff for complex nested structures: 3) left side diff exact 1`] = `
"  {
    "level1": {
      "level2A": {
        "level3A": {
-         "value": "changed",
+         "value": "original",
        },
        "level3B": [
          1,
          2,
          {
            "nestedValue": "same",
          },
        ],
      },
      "level2B": "unchanged",
    },
  }"
`;

exports[`diff-printer renders diff for complex nested structures: 4) right side diff exact 1`] = `
"  {
    "level1": {
      "level2A": {
        "level3A": {
-         "value": "original",
+         "value": "changed",
        },
        "level3B": [
          1,
          2,
          {
            "nestedValue": "same",
          },
        ],
      },
      "level2B": "unchanged",
    },
  }"
`;

exports[`diff-printer renders diff for objects with numeric keys: 1) left side diff 1`] = `
"  {
    "0": "zero",
-   "1": "changed",
+   "1": "one",
  }"
`;

exports[`diff-printer renders diff for objects with numeric keys: 2) right side diff 1`] = `
"  {
    "0": "zero",
-   "1": "one",
+   "1": "changed",
  }"
`;

exports[`diff-printer renders diff for objects with numeric keys: 3) left side diff exact 1`] = `
"  {
    "0": "zero",
-   "1": "changed",
+   "1": "one",
  }"
`;

exports[`diff-printer renders diff for objects with numeric keys: 4) right side diff exact 1`] = `
"  {
    "0": "zero",
-   "1": "one",
+   "1": "changed",
  }"
`;

exports[`diff-printer renders diff when left and right are arrays with equal length: 1) left side diff 1`] = `""`;

exports[`diff-printer renders diff when left and right are arrays with equal length: 2) right side diff 1`] = `""`;

exports[`diff-printer renders diff when left and right are arrays with equal length: 3) left side diff exact 1`] = `
"  [
-   3,
+   1,
    2,
-   1,
+   3,
  ]"
`;

exports[`diff-printer renders diff when left and right are arrays with equal length: 4) right side diff exact 1`] = `
"  [
-   1,
+   3,
    2,
-   3,
+   1,
  ]"
`;

exports[`diff-printer renders diff when left and right are objects: 1) left side diff 1`] = `
"  {
-   "rightField": "data",
    "extraField": "data",
    "sameData": "txt",
  }"
`;

exports[`diff-printer renders diff when left and right are objects: 2) right side diff 1`] = `
"  {
-   "extraField": "data",
    "rightField": "data",
    "sameData": "txt",
  }"
`;

exports[`diff-printer renders diff when left and right are objects: 3) left side diff exact 1`] = `
"  {
-   "rightField": "data",
+   "extraField": "data",
    "sameData": "txt",
  }"
`;

exports[`diff-printer renders diff when left and right are objects: 4) right side diff exact 1`] = `
"  {
-   "extraField": "data",
+   "rightField": "data",
    "sameData": "txt",
  }"
`;

exports[`diff-printer renders diff when left and right are primitives: 1) left side diff 1`] = `
"- null
+ true"
`;

exports[`diff-printer renders diff when left and right are primitives: 2) right side diff 1`] = `
"- true
+ null"
`;

exports[`diff-printer renders diff when left and right are primitives: 3) left side diff exact 1`] = `
"- null
+ true"
`;

exports[`diff-printer renders diff when left and right are primitives: 4) right side diff exact 1`] = `
"- true
+ null"
`;

exports[`diff-printer renders diff when left and right contain different empty non-primitives: 1) left side diff 1`] = `
"  {
-   "emptyNonPrimitive": {},
+   "emptyNonPrimitive": [],
  }"
`;

exports[`diff-printer renders diff when left and right contain different empty non-primitives: 2) right side diff 1`] = `
"  {
-   "emptyNonPrimitive": [],
+   "emptyNonPrimitive": {},
  }"
`;

exports[`diff-printer renders diff when left and right contain different empty non-primitives: 3) left side diff exact 1`] = `
"  {
-   "emptyNonPrimitive": {},
+   "emptyNonPrimitive": [],
  }"
`;

exports[`diff-printer renders diff when left and right contain different empty non-primitives: 4) right side diff exact 1`] = `
"  {
-   "emptyNonPrimitive": [],
+   "emptyNonPrimitive": {},
  }"
`;

exports[`diff-printer renders diff when left is empty object and right is empty array: 1) left side diff 1`] = `
"- []
+ {}"
`;

exports[`diff-printer renders diff when left is empty object and right is empty array: 2) right side diff 1`] = `"  []"`;

exports[`diff-printer renders diff when left is empty object and right is empty array: 3) left side diff exact 1`] = `
"- []
+ {}"
`;

exports[`diff-printer renders diff when left is empty object and right is empty array: 4) right side diff exact 1`] = `"  []"`;

exports[`diff-printer renders diff when left is missing properties or right has extra properties: 1) left side diff 1`] = `
"  {
-   "age": 33,
-   "objectData": {
-     "text": "text",
-   },
-   "nullData": null,
-   "arrayData": [
-     1,
-   ],
    "name": "some-name",
    "extraField": "some-data",
  }"
`;

exports[`diff-printer renders diff when left is missing properties or right has extra properties: 2) right side diff 1`] = `
"  {
-   "extraField": "some-data",
    "name": "some-name",
    "age": 33,
    "objectData": {
      "text": "text",
    },
    "nullData": null,
    "arrayData": [
      1,
    ],
  }"
`;

exports[`diff-printer renders diff when left is missing properties or right has extra properties: 3) left side diff exact 1`] = `
"  {
-   "age": 33,
-   "objectData": {
-     "text": "text",
-   },
-   "nullData": null,
-   "arrayData": [
-     1,
-   ],
    "name": "some-name",
+   "extraField": "some-data",
  }"
`;

exports[`diff-printer renders diff when left is missing properties or right has extra properties: 4) right side diff exact 1`] = `
"  {
-   "extraField": "some-data",
    "name": "some-name",
+   "age": 33,
+   "objectData": {
+     "text": "text",
+   },
+   "nullData": null,
+   "arrayData": [
+     1,
+   ],
  }"
`;

exports[`diff-printer renders diff when left is object with empty array and right is primitive: 1) left side diff 1`] = `
"- "text"
+ {
+   "emptyArray": [],
+ }"
`;

exports[`diff-printer renders diff when left is object with empty array and right is primitive: 2) right side diff 1`] = `
"- {
-   "emptyArray": [],
- }
+ "text""
`;

exports[`diff-printer renders diff when left is object with empty array and right is primitive: 3) left side diff exact 1`] = `
"- "text"
+ {
+   "emptyArray": [],
+ }"
`;

exports[`diff-printer renders diff when left is object with empty array and right is primitive: 4) right side diff exact 1`] = `
"- {
-   "emptyArray": [],
- }
+ "text""
`;

exports[`diff-printer renders diff when left is object with empty object and right is primitive: 1) left side diff 1`] = `
"- "text"
+ {
+   "emptyObject": {},
+ }"
`;

exports[`diff-printer renders diff when left is object with empty object and right is primitive: 2) right side diff 1`] = `
"- {
-   "emptyObject": {},
- }
+ "text""
`;

exports[`diff-printer renders diff when left is object with empty object and right is primitive: 3) left side diff exact 1`] = `
"- "text"
+ {
+   "emptyObject": {},
+ }"
`;

exports[`diff-printer renders diff when left is object with empty object and right is primitive: 4) right side diff exact 1`] = `
"- {
-   "emptyObject": {},
- }
+ "text""
`;

exports[`diff-printer renders diff when left is primitive and right is empty array: 1) left side diff 1`] = `
"- []
+ "text""
`;

exports[`diff-printer renders diff when left is primitive and right is empty array: 2) right side diff 1`] = `"  []"`;

exports[`diff-printer renders diff when left is primitive and right is empty array: 3) left side diff exact 1`] = `
"- []
+ "text""
`;

exports[`diff-printer renders diff when left is primitive and right is empty array: 4) right side diff exact 1`] = `"  []"`;

exports[`diff-printer renders diff when left is primitive and right is empty object: 1) left side diff 1`] = `
"- {}
+ "text""
`;

exports[`diff-printer renders diff when left is primitive and right is empty object: 2) right side diff 1`] = `
"- "text"
+ {}"
`;

exports[`diff-printer renders diff when left is primitive and right is empty object: 3) left side diff exact 1`] = `
"- {}
+ "text""
`;

exports[`diff-printer renders diff when left is primitive and right is empty object: 4) right side diff exact 1`] = `
"- "text"
+ {}"
`;

exports[`diff-printer renders diff when left is primitive and right is object: 1) left side diff 1`] = `
"- {
-   "data": "text",
- }
+ "text""
`;

exports[`diff-printer renders diff when left is primitive and right is object: 2) right side diff 1`] = `
"- "text"
+ {
+   "data": "text",
+ }"
`;

exports[`diff-printer renders diff when left is primitive and right is object: 3) left side diff exact 1`] = `
"- {
-   "data": "text",
- }
+ "text""
`;

exports[`diff-printer renders diff when left is primitive and right is object: 4) right side diff exact 1`] = `
"- "text"
+ {
+   "data": "text",
+ }"
`;

exports[`diff-printer renders diff when right array includes left array: 1) left side diff 1`] = `
"  [
    1,
    2,
-   3,
  ]"
`;

exports[`diff-printer renders diff when right array includes left array: 2) right side diff 1`] = `""`;

exports[`diff-printer renders diff when right array includes left array: 3) left side diff exact 1`] = `
"- [
-   3,
-   1,
-   2,
- ]
+ [
+   1,
+   2,
+ ]"
`;

exports[`diff-printer renders diff when right array includes left array: 4) right side diff exact 1`] = `
"- [
-   1,
-   2,
- ]
+ [
+   3,
+   1,
+   2,
+ ]"
`;

exports[`diff-printer renders diff with deep nested primitive value mismatch: 1) left side diff 1`] = `
"  {
    "lvl1": {
      "lvl2": {
        "lvl3": {
-         "mismatch": "date",
+         "mismatch": "data",
          "sameData": "txt",
        },
      },
    },
  }"
`;

exports[`diff-printer renders diff with deep nested primitive value mismatch: 2) right side diff 1`] = `
"  {
    "lvl1": {
      "lvl2": {
        "lvl3": {
-         "mismatch": "data",
+         "mismatch": "date",
          "sameData": "txt",
        },
      },
    },
  }"
`;

exports[`diff-printer renders diff with deep nested primitive value mismatch: 3) left side diff exact 1`] = `
"  {
    "lvl1": {
      "lvl2": {
        "lvl3": {
-         "mismatch": "date",
+         "mismatch": "data",
          "sameData": "txt",
        },
      },
    },
  }"
`;

exports[`diff-printer renders diff with deep nested primitive value mismatch: 4) right side diff exact 1`] = `
"  {
    "lvl1": {
      "lvl2": {
        "lvl3": {
-         "mismatch": "data",
+         "mismatch": "date",
          "sameData": "txt",
        },
      },
    },
  }"
`;

exports[`diff-printer renders diff with nested arrays with mismatches: 1) left side diff 1`] = `
"  {
    "data": [
      [
        1,
        2,
      ],
      [
        3,
        4,
      ],
-     [
-       3,
-       5,
-     ],
    ],
  }"
`;

exports[`diff-printer renders diff with nested arrays with mismatches: 2) right side diff 1`] = `
"  {
    "data": [
      [
        1,
        2,
      ],
      [
        3,
        5,
      ],
-     [
-       3,
-       4,
-     ],
    ],
  }"
`;

exports[`diff-printer renders diff with nested arrays with mismatches: 3) left side diff exact 1`] = `
"  {
    "data": [
      [
        1,
        2,
      ],
      [
        3,
-       5,
+       4,
      ],
    ],
  }"
`;

exports[`diff-printer renders diff with nested arrays with mismatches: 4) right side diff exact 1`] = `
"  {
    "data": [
      [
        1,
        2,
      ],
      [
        3,
-       4,
+       5,
      ],
    ],
  }"
`;

exports[`diff-printer renders diff with nested primitive and object mismatch: 1) left side diff 1`] = `
"  {
    "lvl1": {
      "lvl2": {
        "lvl3": {
-         "mismatch": {
-           "data": "txt",
-         },
+         "mismatch": "data",
          "sameData": "txt",
        },
      },
    },
  }"
`;

exports[`diff-printer renders diff with nested primitive and object mismatch: 2) right side diff 1`] = `
"  {
    "lvl1": {
      "lvl2": {
        "lvl3": {
-         "mismatch": "data",
+         "mismatch": {
+           "data": "txt",
+         },
          "sameData": "txt",
        },
      },
    },
  }"
`;

exports[`diff-printer renders diff with nested primitive and object mismatch: 3) left side diff exact 1`] = `
"  {
    "lvl1": {
      "lvl2": {
        "lvl3": {
-         "mismatch": {
-           "data": "txt",
-         },
+         "mismatch": "data",
          "sameData": "txt",
        },
      },
    },
  }"
`;

exports[`diff-printer renders diff with nested primitive and object mismatch: 4) right side diff exact 1`] = `
"  {
    "lvl1": {
      "lvl2": {
        "lvl3": {
-         "mismatch": "data",
+         "mismatch": {
+           "data": "txt",
+         },
          "sameData": "txt",
        },
      },
    },
  }"
`;

exports[`diff-printer renders diff with special characters in keys: 1) left side diff 1`] = `
"  {
-   "key-with-dash": "different",
+   "key-with-dash": "value1",
    "key.with.dots": "value2",
  }"
`;

exports[`diff-printer renders diff with special characters in keys: 2) right side diff 1`] = `
"  {
-   "key-with-dash": "value1",
+   "key-with-dash": "different",
    "key.with.dots": "value2",
  }"
`;

exports[`diff-printer renders diff with special characters in keys: 3) left side diff exact 1`] = `
"  {
-   "key-with-dash": "different",
+   "key-with-dash": "value1",
    "key.with.dots": "value2",
  }"
`;

exports[`diff-printer renders diff with special characters in keys: 4) right side diff exact 1`] = `
"  {
-   "key-with-dash": "value1",
+   "key-with-dash": "different",
    "key.with.dots": "value2",
  }"
`;

exports[`diff-printer should not render diff when left and right are equal: 1) left side diff 1`] = `""`;

exports[`diff-printer should not render diff when left and right are equal: 2) right side diff 1`] = `""`;

exports[`diff-printer should not render diff when left and right are equal: 3) left side diff exact 1`] = `""`;

exports[`diff-printer should not render diff when left and right are equal: 4) right side diff exact 1`] = `""`;
